--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "**Правила выполнения домашней работы:**   * Выполняйте домашнее задание в отдельной ветке проекта на GitHub.   * В поле для сдачи работы прикрепите ссылку на ваш проект в Git.   * На проверку можно отправить как все задачи вместе, так и каждую задачу по отдельности.   * Во время проверки вашей домашней работы по частям будет стоять статус «На доработке».   * Любые вопросы по решению задач можете задавать в чате учебной группы.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json --watch",
+    "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
+    "eslint:dump": "eslint --print-config ./.eslintrc.json",
+    "test": "echo \"Error: no test specified\" && exit 1"   
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",  
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "eslint": "^9.19.0",
+    "mongoose": "^8.9.5",
     "typescript": "^5.7.3"
   }
 }
